--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.14.25",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.24",
+    "immer": "^9.0.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
