--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/react": "^16.14.25",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.24",
+    "autoprefixer": "^10.4.5",
     "immer": "^9.0.12",
+    "postcss": "^8.4.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "~4.1.5"
   },
   "scripts": {
